Fixed lowercase L bug and added overflow to global.css to permanently reserve vertical scrollbar space.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,6 +70,10 @@ body {
    Layout
    =========================================================== */
 
+html {
+    overflow-y: scroll;
+}
+
 .container {
     max-width: var(--content-width);
     margin: auto;
